--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lista10_package
 description: A new Flutter package project.
 version: 0.0.1
-homepage: https://www.example.com
+homepage: https://github.com/danieldsdias/lista10_package
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
